# progettoLSO202223

./: CMakeLists.txt  Messico  README.md
Client/IncludeC/: SocketUtilClient.h  ThreadPrompt.h  ThreadRender.h
Client/SrcC/: MainClient.c  SocketUtilClient.c  ThreadPrompt.c  ThreadRender.c
Client/include/: CommUtilClient.h  ConsoleLayouts.h  Def.h  LogUtilClient.h  ParserClient.h  PollSwitches.h  Prompt.h  SocketUtilClient.h  ThreadPrompt.h  ThreadRender.h  commUtil.h
Client/src/: CommUtilClient.c  ConsoleLayouts.c  LogUtilClient.c  MainClient.c  ParserClient.c  PollSwitches.c  Prompt.c  PromptBot1.c  PromptBot2.c  SocketUtilClient.c  ThreadPrompt.c  ThreadRender.c  commUtil.c
Eseguibili/: server_compiler.sh
LSO/: LSO2223_Database.sql
SQL/: placehoplder.cpp  placehoplder.h
Server/IncludeS/: socketUtil.h  socketUtilServer.h
Server/SrcS/: MainServer.c  socketUtil.c  socketUtilServer.c
Server/include/: CommUtilServer.h  Def.h  GameLogic.h  ListHandler.h  LogUtilServer.h  LogicGame.h  LogicRoom.h  LogicSigninLogin.h  MySqlUtil.h  ParserServer.h  RoomLogic.h  SocketUtilServer.h  ThreadBuilder.h  ThreadRoom.h  ThreadService.h  socketUtilServer.h
Server/media/: words.txt
Server/src/: CommUtilServer.c  GameLogic.c  ListHandler.c  LogUtilServer.c  LogicGame.c  LogicRoom.c  LogicSigninLogin.c  MainServer.c  MySqlUtil.c  ParserServer.c  RoomLogic.c  SocketUtilServer.c  ThreadBuilder.c  ThreadRoom.c  ThreadService.c  listHandler.c
